--- a/index.html
+++ b/index.html
@@ -5,8 +5,37 @@
 </head>
 <body>
 
-<h1>Introduction</h1>
-<p>Hi, my name is Jared Hasson</p>
+<h1>About</h1>
+<p>I'm a software engineer working on back-end services, object-oriented programming, cross-platform frameworks and
+    distributed systems.</p>
+
+<hr/>
+
+<h1>Projects</h1>
+<h2>Touchbar Information</h2>
+<p>This was my first project in React and focused on teaching users what they could do with the TouchBar on the new
+    Macbook Pro.
+    I focused on a simple, streamlined user interface.</p>
+<h2>Get2gether</h2>
+<p>My first Flutter project, focused on a clean, intuitive mobile design.</p>
+<h2>Let's Go! Companion App</h2>
+<p>I've been a Pokémon Fan for a while, so I made a companion app to help players track certain in-game progress.</p>
+
+<hr/>
+
+<h1>Experience</h1>
+<ul>
+    <li>Software Engineering Intern</li>
+    <li>Software Business Analyst</li>
+    <li>Client Onboarding Specialist</li>
+</ul>
+
+<hr>
+<h1>Contact</h1>
+<a href="https://twitter.com/JaredEzz">Twitter</a>
+<a href="https://linkedin.com/in/jaredhasson">LinkedIn</a>
+<a href="https://www.facebook.com/jaredezzethasson">Facebook</a>
+<a href="https://app.pluralsight.com/profile/jared-hasson">Pluralsight</a>
 
 </body>
 </html>
