finish basic html portfolio

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 <h2>Get2gether</h2>
 <p>My first Flutter project, focused on a clean, intuitive mobile design.</p>
 <h2>Let's Go! Companion App</h2>
-<p>I've been a Pokémon Fan for a while, so I made a companion app to help players track certain in-game progress.</p>
+<p>I've been a Pokemon Fan for a while, so I made a companion app to help players track certain in-game progress.</p>
 
 <hr/>
 
 <h1>Experience</h1>
 <ul>
-    <li>Software Engineering Intern</li>
-    <li>Software Business Analyst</li>
-    <li>Client Onboarding Specialist</li>
+    <li>Software Engineering Intern, Jan 2019 - Present</li>
+    <li>Software Business Analyst, Mar 2018 - Jan 2019</li>
+    <li>Client Onboarding Specialist, May 2015 - Feb 2016</li>
 </ul>
 
 <hr>
