update html links

--- a/about.html
+++ b/about.html
@@ -10,8 +10,8 @@
     distributed systems.</p>
 <hr/>
 
-<a href="http://jaredhasson.tech/experience">Experience</a>
-<a href="http://jaredhasson.tech/projects">Projects</a>
+<a href="http://jaredhasson.tech/experience.html">Experience</a>
+<a href="http://jaredhasson.tech/projects.html">Projects</a>
 
 </body>
 </html>
