update experience and about page

--- a/experience.html
+++ b/experience.html
@@ -5,10 +5,12 @@
 </head>
 <body>
 
-<h1>About</h1>
-<p>I'm a software engineer working on back-end services, object-oriented programming, cross-platform frameworks and
-    distributed systems.</p>
-<hr/>
+<h1>Experience</h1>
+<ul>
+    <li>Software Engineering Intern, Jan 2019 - Present</li>
+    <li>Software Business Analyst, Mar 2018 - Jan 2019</li>
+    <li>Client Onboarding Specialist, May 2015 - Feb 2016</li>
+</ul>
 
 <a href="http://jaredhasson.tech/about.html">About</a>
 <a href="http://jaredhasson.tech/projects.html">Projects</a>
