--- a/about.html
+++ b/about.html
@@ -10,6 +10,13 @@
     distributed systems.</p>
 <hr/>
 
+<h1>Contact</h1>
+<a href="https://twitter.com/JaredEzz">Twitter</a>
+<a href="https://linkedin.com/in/jaredhasson">LinkedIn</a>
+<a href="https://www.facebook.com/jaredezzethasson">Facebook</a>
+<a href="https://app.pluralsight.com/profile/jared-hasson">Pluralsight</a>
+
+
 <a href="http://jaredhasson.tech/experience.html">Experience</a>
 <a href="http://jaredhasson.tech/projects.html">Projects</a>
 
