three new pages for activity D6

--- a/experience.html
+++ b/experience.html
@@ -12,8 +12,10 @@
     <li>Client Onboarding Specialist, May 2015 - Feb 2016</li>
 </ul>
 
-<a href="http://jaredhasson.tech/about.html">About</a>
-<a href="http://jaredhasson.tech/projects.html">Projects</a>
-
+<strong>Links</strong>
+<ol>
+    <li><a href="http://jaredhasson.tech/about.html">About</a></li>
+    <li><a href="http://jaredhasson.tech/projects.html">Projects</a></li>
+</ol>
 </body>
 </html>
