--- a/projects.html
+++ b/projects.html
@@ -9,15 +9,22 @@
 <p>This was my first project in React and focused on teaching users what they could do with the TouchBar on the new
     Macbook Pro.
     I focused on a simple, streamlined user interface.</p>
+<img src="https://jaredezz.github.io/portfolio/static/media/macbook.55efa4be.jpg" width="130"/>
 <h2>Get2gether</h2>
 <p>My first Flutter project, focused on a clean, intuitive mobile design.</p>
+<img src="https://jaredezz.github.io/portfolio/static/media/get2gether.75d1e223.png" width="130"/>
 <h2>Let's Go! Companion App</h2>
 <p>I've been a Pokémon Fan for a while, so I made a companion app to help players track certain in-game progress.</p>
+<img src="https://jaredezz.github.io/portfolio/static/media/lets_go.5f87c59c.png" width="130"/>
 
 <hr/>
 
-<a href="http://jaredhasson.tech/about.html">About</a>
-<a href="http://jaredhasson.tech/experience.html">Experience</a>
+<strong>Links</strong>
+<ol>
+    <li><a href="http://jaredhasson.tech/about.html">About</a></li>
+    <li><a href="http://jaredhasson.tech/experience.html">Experience</a></li>
+</ol>
+
 
 </body>
 </html>
