add hr to experience page

--- a/experience.html
+++ b/experience.html
@@ -12,6 +12,9 @@
     <li>Client Onboarding Specialist, May 2015 - Feb 2016</li>
 </ul>
 
+</body>
+</hr>
+
 <strong>Links</strong>
 <ol>
     <li><a href="http://jaredhasson.tech/about.html">About</a></li>
