--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 </head>
 <body>
 
+<ul class="bar">
+    <li class="bar"><a class="bar" href="index.html"><strong>Home</strong></a></li>
+    <li class="bar"><a class="bar" href="experience.html"><strong>Experience</strong></a></li>
+    <li class="bar"><a class="bar" href="projects.html"><strong>Projects</strong></a></li>
+    <li class="bar"><a class="bar" href="about.html"><strong>About</strong></a></li>
+</ul>
 <h1>About</h1>
 <p>I'm a software engineer working on back-end services, object-oriented programming, cross-platform frameworks and
     distributed systems.</p>
@@ -14,11 +20,11 @@
 
 <h1>Projects</h1>
 <h2>Touchbar Information</h2>
-<p>This was my first project in React and focused on teaching users what they could do with the TouchBar on the new
+<p>This was my <em>first</em> project in React and focused on teaching users what they could do with the TouchBar on the new
     Macbook Pro.
     I focused on a simple, streamlined user interface.</p>
 <h2>Get2gether</h2>
-<p>My first Flutter project, focused on a clean, intuitive mobile design.</p>
+<p>My <em>first</em>  Flutter project, focused on a clean, intuitive mobile design.</p>
 <h2>Let's Go! Companion App</h2>
 <p>I've been a Pokemon Fan for a while, so I made a companion app to help players track certain in-game progress.</p>
 
@@ -26,9 +32,9 @@
 
 <h1>Experience</h1>
 <ul>
-    <li>Software Engineering Intern, Jan 2019 - Present</li>
-    <li>Software Business Analyst, Mar 2018 - Jan 2019</li>
-    <li>Client Onboarding Specialist, May 2015 - Feb 2016</li>
+    <li class="current">Software Engineering Intern, Jan 2019 - Present</li>
+    <li class="past">Software Business Analyst, Mar 2018 - Jan 2019</li>
+    <li class="past">Client Onboarding Specialist, May 2015 - Feb 2016</li>
 </ul>
 
 <hr>
